# yandex_cup_2023

./: .gitignore  pyproject.toml
notebooks/: als.ipynb  analysis.ipynb  baseline.ipynb  dssm.ipynb  knn.ipynb  lstm.ipynb  model_catboost.ipynb  mult_vae.ipynb  normalize.ipynb  pca.ipynb  save_pred.ipynb
