[tool.poetry]
name = "yandex-cup-2023"
version = "0.1.0"
description = ""
authors = ["Artem Vopilov <mister.0025@yandex.ru>"]
readme = "README.md"
packages = [{include = "yandex_cup_2023"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
pandas = "^2.1.2"
numpy = "^1.26.1"
torch = "^2.1.0"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
