[tool.poetry]
name = "yandex-cup-2023"
version = "0.1.0"
description = ""
authors = ["Artem Vopilov <mister.0025@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
pandas = "^2.1.2"
numpy = "^1.26.1"
torch = "^2.1.0"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
catalyst = "^22.4"
loguru = "^0.7.2"
hnswlib = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
